message_bank_files = files(
    'message_bank_moves_used_in_battle.gmm',
    'message_bank_unk_0001.gmm',
    'message_bank_unk_0002.gmm',
    'message_bank_unk_0003.gmm',
    'message_bank_unk_0004.gmm',
    'message_bank_unk_0005.gmm',
    'message_bank_unk_0006.gmm',
    'message_bank_unk_0007.gmm',
    'message_bank_unk_0008.gmm',
    'message_bank_unk_0009.gmm',
    'message_bank_unk_0010.gmm',
    'message_bank_unk_0011.gmm',
    'message_bank_ball_seal_names.gmm',
    'message_bank_ball_seal_names_plural.gmm',
    'message_bank_unk_0014.gmm',
    'message_bank_unk_0015.gmm',
    'message_bank_unk_0016.gmm',
    'message_bank_unk_0017.gmm',
    'message_bank_unk_0018.gmm',
    'message_bank_unk_0019.gmm',
    'message_bank_unk_0020.gmm',
    'message_bank_frontier_trainer_names.gmm',
    'message_bank_unk_0022.gmm',
    'message_bank_jubilife_city.gmm',
    'message_bank_jubilife_city_mart.gmm',
    'message_bank_jubilife_city_unknown_house_1.gmm',
    'message_bank_jubilife_city_pokecenter_1f.gmm',
    'message_bank_poketch_co_1f.gmm',
    'message_bank_poketch_co_2f.gmm',
    'message_bank_poketch_co_3f.gmm',
    'message_bank_jubilife_tv_1f.gmm',
    'message_bank_jubilife_tv_2f.gmm',
    'message_bank_jubilife_tv_3f.gmm',
    'message_bank_jubilife_tv_4f.gmm',
    'message_bank_jubilife_tv_2f_gallery.gmm',
    'message_bank_jubilife_tv_3f_global_ranking_room.gmm',
    'message_bank_jubilife_tv_3f_group_ranking_room.gmm',
    'message_bank_jubilife_tv_elevator.gmm',
    'message_bank_jubilife_city_south_house_1f.gmm',
    'message_bank_jubilife_city_south_house_2f.gmm',
    'message_bank_jubilife_city_south_house_3f.gmm',
    'message_bank_jubilife_city_unknown_house_2.gmm',
    'message_bank_jubilife_city_condominiums_1f.gmm',
    'message_bank_jubilife_city_condominiums_2f.gmm',
    'message_bank_jubilife_city_condominiums_3f.gmm',
    'message_bank_jubilife_city_condominiums_4f.gmm',
    'message_bank_global_terminal_1f.gmm',
    'message_bank_global_terminal_2f.gmm',
    'message_bank_global_terminal_3f.gmm',
    'message_bank_trainers_school.gmm',
    'message_bank_jubilife_city_southwest_house_1f.gmm',
    'message_bank_jubilife_city_southwest_house_2f.gmm',
    'message_bank_jubilife_city_unknown_house_3.gmm',
    'message_bank_jubilife_city_unknown_house_4.gmm',
    'message_bank_canalave_city.gmm',
    'message_bank_canalave_city_mart.gmm',
    'message_bank_canalave_city_gym.gmm',
    'message_bank_canalave_city_pokecenter_1f.gmm',
    'message_bank_canalave_library_1f.gmm',
    'message_bank_canalave_library_2f.gmm',
    'message_bank_canalave_library_3f.gmm',
    'message_bank_canalave_city_southeast_house.gmm',
    'message_bank_canalave_city_east_house.gmm',
    'message_bank_canalave_city_harbor_inn.gmm',
    'message_bank_canalave_city_sailor_eldritch_house.gmm',
    'message_bank_oreburgh_city.gmm',
    'message_bank_oreburgh_city_mart.gmm',
    'message_bank_oreburgh_city_gym.gmm',
    'message_bank_oreburgh_city_pokecenter_1f.gmm',
    'message_bank_oreburgh_city_pokecenter_b1f.gmm',
    'message_bank_oreburgh_city_northwest_house_1f.gmm',
    'message_bank_oreburgh_city_northwest_house_2f.gmm',
    'message_bank_oreburgh_city_northwest_house_3f.gmm',
    'message_bank_oreburgh_city_northwest_house_4f.gmm',
    'message_bank_oreburgh_city_north_house_1f.gmm',
    'message_bank_oreburgh_city_north_house_2f.gmm',
    'message_bank_oreburgh_city_north_house_3f.gmm',
    'message_bank_oreburgh_city_north_house_4f.gmm',
    'message_bank_oreburgh_city_middle_house.gmm',
    'message_bank_mining_museum.gmm',
    'message_bank_oreburgh_city_west_house.gmm',
    'message_bank_oreburgh_city_east_house_1f.gmm',
    'message_bank_oreburgh_city_east_house_2f.gmm',
    'message_bank_oreburgh_city_east_house_3f.gmm',
    'message_bank_oreburgh_city_south_house.gmm',
    'message_bank_eterna_city.gmm',
    'message_bank_eterna_city_mart.gmm',
    'message_bank_eterna_city_gym.gmm',
    'message_bank_eterna_city_dp_gym.gmm',
    'message_bank_eterna_city_pokecenter_1f.gmm',
    'message_bank_eterna_city_pokecenter_2f.gmm',
    'message_bank_cycle_shop.gmm',
    'message_bank_team_galactic_eterna_building_1f.gmm',
    'message_bank_team_galactic_eterna_building_2f.gmm',
    'message_bank_team_galactic_eterna_building_3f.gmm',
    'message_bank_team_galactic_eterna_building_4f.gmm',
    'message_bank_rotoms_room.gmm',
    'message_bank_eterna_city_condominiums_1f.gmm',
    'message_bank_eterna_city_condominiums_2f.gmm',
    'message_bank_eterna_city_condominiums_3f.gmm',
    'message_bank_eterna_city_condominiums_4f.gmm',
    'message_bank_route_206_cycling_road_north_gate.gmm',
    'message_bank_eterna_city_north_house.gmm',
    'message_bank_eterna_city_south_house.gmm',
    'message_bank_eterna_city_east_house.gmm',
    'message_bank_eterna_city_underground_man_house.gmm',
    'message_bank_hearthome_city.gmm',
    'message_bank_hearthome_city_mart.gmm',
    'message_bank_hearthome_city_gym_entrance_room.gmm',
    'message_bank_hearthome_city_gym_leader_room.gmm',
    'message_bank_hearthome_city_dp_gym_elevator_room_1.gmm',
    'message_bank_hearthome_city_dp_gym_elevator_room_2.gmm',
    'message_bank_hearthome_city_dp_gym_leader_room.gmm',
    'message_bank_hearthome_city_pokecenter_1f.gmm',
    'message_bank_hearthome_city_southeast_house_1f.gmm',
    'message_bank_hearthome_city_southeast_house_2f.gmm',
    'message_bank_hearthome_city_southeast_house_elevator.gmm',
    'message_bank_hearthome_city_pokemon_fan_club.gmm',
    'message_bank_hearthome_city_west_gate_to_amity_square.gmm',
    'message_bank_hearthome_city_east_gate_to_amity_square.gmm',
    'message_bank_route_208_gate_to_hearthome_city.gmm',
    'message_bank_route_209_gate_to_hearthome_city.gmm',
    'message_bank_route_212_gate_to_hearthome_city.gmm',
    'message_bank_hearthome_city_northeast_house_1f.gmm',
    'message_bank_hearthome_city_northeast_house_2f.gmm',
    'message_bank_hearthome_city_northeast_house_elevator.gmm',
    'message_bank_hearthome_city_northwest_house.gmm',
    'message_bank_poffin_house.gmm',
    'message_bank_contest_hall_lobby.gmm',
    'message_bank_contest_hall_stage_no_contest.gmm',
    'message_bank_foreign_building.gmm',
    'message_bank_pastoria_city.gmm',
    'message_bank_pastoria_city_mart.gmm',
    'message_bank_pastoria_city_gym.gmm',
    'message_bank_pastoria_city_pokecenter_1f.gmm',
    'message_bank_pastoria_city_pokecenter_2f.gmm',
    'message_bank_pastoria_city_observatory_gate_1f.gmm',
    'message_bank_pastoria_city_observatory_gate_2f.gmm',
    'message_bank_pastoria_city_southwest_house.gmm',
    'message_bank_pastoria_city_middle_house.gmm',
    'message_bank_pastoria_city_east_house.gmm',
    'message_bank_pastoria_city_north_house.gmm',
    'message_bank_pastoria_city_northeast_house.gmm',
    'message_bank_veilstone_city.gmm',
    'message_bank_veilstone_city_gym.gmm',
    'message_bank_veilstone_city_pokecenter_1f.gmm',
    'message_bank_veilstone_city_pokecenter_b1f.gmm',
    'message_bank_game_corner.gmm',
    'message_bank_veilstone_store_1f.gmm',
    'message_bank_veilstone_store_2f.gmm',
    'message_bank_veilstone_store_3f.gmm',
    'message_bank_veilstone_store_4f.gmm',
    'message_bank_veilstone_store_5f.gmm',
    'message_bank_veilstone_store_elevator.gmm',
    'message_bank_veilstone_store_b1f.gmm',
    'message_bank_veilstone_city_galactic_warehouse.gmm',
    'message_bank_veilstone_city_prize_exchange.gmm',
    'message_bank_veilstone_city_southeast_house.gmm',
    'message_bank_veilstone_city_northwest_house.gmm',
    'message_bank_veilstone_city_northeast_house.gmm',
    'message_bank_veilstone_city_southwest_house.gmm',
    'message_bank_route_215_gate_to_veilstone_city.gmm',
    'message_bank_sunyshore_city.gmm',
    'message_bank_sunyshore_city_mart.gmm',
    'message_bank_sunyshore_city_gym_room_1.gmm',
    'message_bank_sunyshore_city_gym_room_3.gmm',
    'message_bank_sunyshore_city_pokecenter_1f.gmm',
    'message_bank_sunyshore_market.gmm',
    'message_bank_sunyshore_city_northeast_house.gmm',
    'message_bank_sunyshore_city_west_house.gmm',
    'message_bank_sunyshore_city_northwest_house.gmm',
    'message_bank_sunyshore_city_unknown_house_1.gmm',
    'message_bank_sunyshore_city_unknown_house_2.gmm',
    'message_bank_sunyshore_city_east_house.gmm',
    'message_bank_vista_lighthouse.gmm',
    'message_bank_unk_0175.gmm',
    'message_bank_snowpoint_city.gmm',
    'message_bank_snowpoint_city_mart.gmm',
    'message_bank_snowpoint_city_gym.gmm',
    'message_bank_snowpoint_city_pokecenter_1f.gmm',
    'message_bank_snowpoint_city_west_house.gmm',
    'message_bank_snowpoint_city_east_house.gmm',
    'message_bank_pokemon_league.gmm',
    'message_bank_pokemon_league_south_pokecenter_1f.gmm',
    'message_bank_pokemon_league_north_pokecenter_1f.gmm',
    'message_bank_pokemon_league_aaron_room.gmm',
    'message_bank_pokemon_league_bertha_room.gmm',
    'message_bank_pokemon_league_flint_room.gmm',
    'message_bank_pokemon_league_lucian_room.gmm',
    'message_bank_pokemon_league_champion_room.gmm',
    'message_bank_pokemon_league_elevator_to_hall_of_fame.gmm',
    'message_bank_pokemon_league_hall_of_fame.gmm',
    'message_bank_fight_area.gmm',
    'message_bank_fight_area_mart.gmm',
    'message_bank_fight_area_pokecenter_1f.gmm',
    'message_bank_battle_park_gate_to_fight_area.gmm',
    'message_bank_route_225_gate_to_fight_area.gmm',
    'message_bank_fight_area_middle_house.gmm',
    'message_bank_fight_area_south_house.gmm',
    'message_bank_unk_0199.gmm',
    'message_bank_unk_0200.gmm',
    'message_bank_unk_0201.gmm',
    'message_bank_nature_names.gmm',
    'message_bank_unk_0203.gmm',
    'message_bank_contest_text.gmm',
    'message_bank_unk_0205.gmm',
    'message_bank_unk_0206.gmm',
    'message_bank_contest_judge_names.gmm',
    'message_bank_unk_0208.gmm',
    'message_bank_unk_0209.gmm',
    'message_bank_unk_0210.gmm',
    'message_bank_unk_0211.gmm',
    'message_bank_unk_0212.gmm',
    'message_bank_common_strings.gmm',
    'message_bank_unk_0214.gmm',
    'message_bank_unk_0215.gmm',
    'message_bank_unk_0216.gmm',
    'message_bank_unk_0217.gmm',
    'message_bank_unk_0218.gmm',
    'message_bank_status_condition_names.gmm',
    'message_bank_unk_0220.gmm',
    'message_bank_unk_0221.gmm',
    'message_bank_oreburgh_mine_b1f.gmm',
    'message_bank_oreburgh_mine_b2f.gmm',
    'message_bank_valley_windworks_outside.gmm',
    'message_bank_valley_windworks_building.gmm',
    'message_bank_eterna_forest_outside.gmm',
    'message_bank_eterna_forest.gmm',
    'message_bank_fuego_ironworks_outside.gmm',
    'message_bank_fuego_ironworks_building.gmm',
    'message_bank_mt_coronet_1f_south.gmm',
    'message_bank_mt_coronet_2f.gmm',
    'message_bank_mt_coronet_1f_tunnel_room.gmm',
    'message_bank_mt_coronet_1f_north_room_1.gmm',
    'message_bank_spear_pillar.gmm',
    'message_bank_spear_pillar_distorted.gmm',
    'message_bank_hall_of_origin.gmm',
    'message_bank_spear_pillar_dialga.gmm',
    'message_bank_spear_pillar_palkia.gmm',
    'message_bank_unk_0239.gmm',
    'message_bank_great_marsh_1.gmm',
    'message_bank_great_marsh_2.gmm',
    'message_bank_great_marsh_3.gmm',
    'message_bank_great_marsh_4.gmm',
    'message_bank_great_marsh_5.gmm',
    'message_bank_great_marsh_6.gmm',
    'message_bank_solaceon_ruins_maniac_tunnel_room.gmm',
    'message_bank_solaceon_ruins_room_1.gmm',
    'message_bank_solaceon_ruins_room_2.gmm',
    'message_bank_solaceon_ruins_room_7.gmm',
    'message_bank_victory_road_1f.gmm',
    'message_bank_victory_road_1f_room_2.gmm',
    'message_bank_pal_park.gmm',
    'message_bank_amity_square.gmm',
    'message_bank_unk_0254.gmm',
    'message_bank_floaroma_meadow.gmm',
    'message_bank_floaroma_meadow_house.gmm',
    'message_bank_oreburgh_gate_1f.gmm',
    'message_bank_oreburgh_gate_b1f.gmm',
    'message_bank_fullmoon_island.gmm',
    'message_bank_fullmoon_island_forest.gmm',
    'message_bank_stark_mountain_outside.gmm',
    'message_bank_stark_mountain_room_1.gmm',
    'message_bank_stark_mountain_room_2.gmm',
    'message_bank_stark_mountain_room_3.gmm',
    'message_bank_sendoff_spring.gmm',
    'message_bank_turnback_cave_entrance.gmm',
    'message_bank_turnback_cave_pillar_room.gmm',
    'message_bank_turnback_cave_giratina_room.gmm',
    'message_bank_flower_paradise.gmm',
    'message_bank_snowpoint_temple_1f.gmm',
    'message_bank_snowpoint_temple_b5f.gmm',
    'message_bank_wayward_cave_1f.gmm',
    'message_bank_ruin_maniac_cave_short.gmm',
    'message_bank_ruin_maniac_cave_long.gmm',
    'message_bank_maniac_tunnel.gmm',
    'message_bank_iron_island.gmm',
    'message_bank_iron_island_b2f_left_room.gmm',
    'message_bank_iron_island_house.gmm',
    'message_bank_old_chateau.gmm',
    'message_bank_old_chateau_side_rooms.gmm',
    'message_bank_old_chateau_back_middle_west_room.gmm',
    'message_bank_galactic_hq_1f.gmm',
    'message_bank_galactic_hq_2f.gmm',
    'message_bank_galactic_hq_3f.gmm',
    'message_bank_galactic_hq_4f.gmm',
    'message_bank_galactic_hq_b1f.gmm',
    'message_bank_galactic_hq_b2f.gmm',
    'message_bank_galactic_hq_control_room.gmm',
    'message_bank_galactic_hq_laboratory.gmm',
    'message_bank_galactic_hq_hall.gmm',
    'message_bank_lake_verity_low_water.gmm',
    'message_bank_lake_verity.gmm',
    'message_bank_verity_cavern.gmm',
    'message_bank_lake_valor_drained.gmm',
    'message_bank_lake_valor.gmm',
    'message_bank_valor_cavern.gmm',
    'message_bank_lake_acuity_low_water.gmm',
    'message_bank_lake_acuity.gmm',
    'message_bank_acuity_cavern.gmm',
    'message_bank_newmoon_island.gmm',
    'message_bank_newmoon_island_forest.gmm',
    'message_bank_battle_park.gmm',
    'message_bank_battle_park_exchange_service_corner.gmm',
    'message_bank_battle_tower.gmm',
    'message_bank_battle_tower_battle_room.gmm',
    'message_bank_battle_tower_multi_battle_room.gmm',
    'message_bank_battle_tower_battle_salon.gmm',
    'message_bank_battle_frontier.gmm',
    'message_bank_battle_frontier_gate_to_fight_area.gmm',
    'message_bank_battle_factory.gmm',
    'message_bank_battle_hall.gmm',
    'message_bank_battle_castle.gmm',
    'message_bank_battle_arcade.gmm',
    'message_bank_distortion_world_1f.gmm',
    'message_bank_distortion_world_b1f.gmm',
    'message_bank_distortion_world_b2f.gmm',
    'message_bank_distortion_world_b3f.gmm',
    'message_bank_distortion_world_b6f.gmm',
    'message_bank_distortion_world_b7f.gmm',
    'message_bank_distortion_world_giratina_room.gmm',
    'message_bank_distortion_world_turnback_cave_room.gmm',
    'message_bank_iron_ruins.gmm',
    'message_bank_iceberg_ruins.gmm',
    'message_bank_rock_peak_ruins.gmm',
    'message_bank_unk_0325.gmm',
    'message_bank_unk_0326.gmm',
    'message_bank_unk_0327.gmm',
    'message_bank_unk_0328.gmm',
    'message_bank_unk_0329.gmm',
    'message_bank_unk_0330.gmm',
    'message_bank_unk_0331.gmm',
    'message_bank_unk_0332.gmm',
    'message_bank_unk_0333.gmm',
    'message_bank_unk_0334.gmm',
    'message_bank_unk_0335.gmm',
    'message_bank_unk_0336.gmm',
    'message_bank_unk_0337.gmm',
    'message_bank_unk_0338.gmm',
    'message_bank_unk_0339.gmm',
    'message_bank_unk_0340.gmm',
    'message_bank_unk_0341.gmm',
    'message_bank_unk_0342.gmm',
    'message_bank_unk_0343.gmm',
    'message_bank_unk_0344.gmm',
    'message_bank_unk_0345.gmm',
    'message_bank_unk_0346.gmm',
    'message_bank_unk_0347.gmm',
    'message_bank_unk_0348.gmm',
    'message_bank_unk_0349.gmm',
    'message_bank_unk_0350.gmm',
    'message_bank_unk_0351.gmm',
    'message_bank_unk_0352.gmm',
    'message_bank_unk_0353.gmm',
    'message_bank_unk_0354.gmm',
    'message_bank_unk_0355.gmm',
    'message_bank_unk_0356.gmm',
    'message_bank_unk_0357.gmm',
    'message_bank_unk_0358.gmm',
    'message_bank_unk_0359.gmm',
    'message_bank_unk_0360.gmm',
    'message_bank_common_strings_2.gmm',
    'message_bank_unk_0362.gmm',
    'message_bank_unk_0363.gmm',
    'message_bank_unk_0364.gmm',
    'message_bank_unk_0365.gmm',
    'message_bank_unk_0366.gmm',
    'message_bank_unk_0367.gmm',
    'message_bank_battle_strings.gmm',
    'message_bank_unk_0369.gmm',
    'message_bank_unk_0370.gmm',
    'message_bank_furniture_names.gmm',
    'message_bank_unk_0372.gmm',
    'message_bank_unk_0373.gmm',
    'message_bank_unk_0374.gmm',
    'message_bank_unk_0375.gmm',
    'message_bank_unk_0376.gmm',
    'message_bank_unk_0377.gmm',
    'message_bank_gym_names.gmm',
    'message_bank_unk_0379.gmm',
    'message_bank_unk_0380.gmm',
    'message_bank_unk_0381.gmm',
    'message_bank_wifi_plaza_entrance.gmm',
    'message_bank_unk_0383.gmm',
    'message_bank_unk_0384.gmm',
    'message_bank_unk_0385.gmm',
    'message_bank_contest_accessory_names.gmm',
    'message_bank_contest_accessory_names_with_articles.gmm',
    'message_bank_contest_backdrop_names.gmm',
    'message_bank_unk_0389.gmm',
    'message_bank_unk_0390.gmm',
    'message_bank_unk_0391.gmm',
    'message_bank_item_names.gmm',
    'message_bank_item_names_with_articles.gmm',
    'message_bank_item_names_plural.gmm',
    'message_bank_unk_0395.gmm',
    'message_bank_bag_pocket_names_with_icons.gmm',
    'message_bank_unk_0397.gmm',
    'message_bank_unk_0398.gmm',
    'message_bank_verity_lakefront.gmm',
    'message_bank_verity_lakefront_unknown_house.gmm',
    'message_bank_valor_lakefront.gmm',
    'message_bank_restaurant.gmm',
    'message_bank_grand_lake_valor_lakefront_east_house.gmm',
    'message_bank_grand_lake_valor_lakefront_west_house.gmm',
    'message_bank_acuity_lakefront.gmm',
    'message_bank_unk_0406.gmm',
    'message_bank_unk_0407.gmm',
    'message_bank_unk_0408.gmm',
    'message_bank_unk_0409.gmm',
    'message_bank_unk_0410.gmm',
    'message_bank_unk_0411.gmm',
    'message_bank_month_names.gmm',
    'message_bank_unk_0415.gmm',
    'message_bank_unk_0416.gmm',
    'message_bank_unk_0417.gmm',
    'message_bank_unk_0418.gmm',
    'message_bank_unk_0419.gmm',
    'message_bank_unk_0420.gmm',
    'message_bank_unk_0421.gmm',
    'message_bank_unk_0422.gmm',
    'message_bank_unk_0423.gmm',
    'message_bank_unk_0424.gmm',
    'message_bank_unk_0425.gmm',
    'message_bank_unk_0426.gmm',
    'message_bank_unk_0427.gmm',
    'message_bank_unk_0428.gmm',
    'message_bank_unk_0429.gmm',
    'message_bank_unk_0430.gmm',
    'message_bank_unk_0431.gmm',
    'message_bank_unk_0432.gmm',
    'message_bank_location_names.gmm',
    'message_bank_mystery_gift_event_names.gmm',
    'message_bank_special_met_location_names.gmm',
    'message_bank_unk_0436.gmm',
    'message_bank_unk_0437.gmm',
    'message_bank_unk_0438.gmm',
    'message_bank_unk_0439.gmm',
    'message_bank_unk_0440.gmm',
    'message_bank_unk_0441.gmm',
    'message_bank_unk_0442.gmm',
    'message_bank_unk_0443.gmm',
    'message_bank_unk_0444.gmm',
    'message_bank_unk_0445.gmm',
    'message_bank_unk_0446.gmm',
    'message_bank_unk_0447.gmm',
    'message_bank_unk_0448.gmm',
    'message_bank_unk_0449.gmm',
    'message_bank_unk_0450.gmm',
    'message_bank_unk_0451.gmm',
    'message_bank_unk_0452.gmm',
    'message_bank_unk_0453.gmm',
    'message_bank_unk_0454.gmm',
    'message_bank_unk_0455.gmm',
    'message_bank_unk_0456.gmm',
    'message_bank_poketch_app_names.gmm',
    'message_bank_unk_0458.gmm',
    'message_bank_unk_0459.gmm',
    'message_bank_unk_0460.gmm',
    'message_bank_unk_0461.gmm',
    'message_bank_unk_0462.gmm',
    'message_bank_unk_0463.gmm',
    'message_bank_unk_0464.gmm',
    'message_bank_poffin_names.gmm',
    'message_bank_route_201.gmm',
    'message_bank_route_202.gmm',
    'message_bank_route_203.gmm',
    'message_bank_route_204_south.gmm',
    'message_bank_route_204_north.gmm',
    'message_bank_route_205_south.gmm',
    'message_bank_route_205_house.gmm',
    'message_bank_route_205_north.gmm',
    'message_bank_route_206.gmm',
    'message_bank_route_206_cycling_road_south_gate.gmm',
    'message_bank_gate_between_eterna_city_route_206.gmm',
    'message_bank_route_207.gmm',
    'message_bank_route_208.gmm',
    'message_bank_route_208_house.gmm',
    'message_bank_route_209.gmm',
    'message_bank_route_209_lost_tower_1f.gmm',
    'message_bank_route_209_lost_tower_5f.gmm',
    'message_bank_route_210_south.gmm',
    'message_bank_cafe.gmm',
    'message_bank_route_210_north.gmm',
    'message_bank_route_210_grandma_wilma_house.gmm',
    'message_bank_route_211_west.gmm',
    'message_bank_route_211_east.gmm',
    'message_bank_route_212_north.gmm',
    'message_bank_pokemon_mansion.gmm',
    'message_bank_pokemon_mansion_maids_room.gmm',
    'message_bank_pokemon_mansion_office.gmm',
    'message_bank_route_212_south.gmm',
    'message_bank_route_212_house.gmm',
    'message_bank_route_213.gmm',
    'message_bank_route_213_gate_to_pastoria_city.gmm',
    'message_bank_footstep_house.gmm',
    'message_bank_grand_lake_route_213_lobby.gmm',
    'message_bank_grand_lake_route_213_east_house.gmm',
    'message_bank_grand_lake_route_213_northwest_house.gmm',
    'message_bank_grand_lake_route_213_northeast_house.gmm',
    'message_bank_route_214.gmm',
    'message_bank_route_214_gate_to_veilstone_city.gmm',
    'message_bank_route_215.gmm',
    'message_bank_route_216.gmm',
    'message_bank_route_216_house.gmm',
    'message_bank_route_217.gmm',
    'message_bank_route_217_west_house.gmm',
    'message_bank_route_217_northeast_house.gmm',
    'message_bank_route_218.gmm',
    'message_bank_route_218_gate_to_jubilife_city.gmm',
    'message_bank_route_218_gate_to_canalave_city.gmm',
    'message_bank_route_219.gmm',
    'message_bank_route_221.gmm',
    'message_bank_pal_park_lobby.gmm',
    'message_bank_route_221_house.gmm',
    'message_bank_route_222.gmm',
    'message_bank_route_222_west_house.gmm',
    'message_bank_route_222_east_house.gmm',
    'message_bank_route_222_gate_to_sunyshore_city.gmm',
    'message_bank_route_224.gmm',
    'message_bank_route_225.gmm',
    'message_bank_route_225_house.gmm',
    'message_bank_unk_0524.gmm',
    'message_bank_route_227.gmm',
    'message_bank_route_227_house.gmm',
    'message_bank_route_228.gmm',
    'message_bank_route_228_gate_to_route_226.gmm',
    'message_bank_route_228_north_house.gmm',
    'message_bank_route_228_south_house.gmm',
    'message_bank_route_229.gmm',
    'message_bank_unk_0532.gmm',
    'message_bank_unk_0533.gmm',
    'message_bank_unk_0534.gmm',
    'message_bank_ribbon_names.gmm',
    'message_bank_unk_0536.gmm',
    'message_bank_unk_0537.gmm',
    'message_bank_unk_0538.gmm',
    'message_bank_unk_0539.gmm',
    'message_bank_unk_0540.gmm',
    'message_bank_unk_0541.gmm',
    'message_bank_unk_0542.gmm',
    'message_bank_unk_0543.gmm',
    'message_bank_unk_0544.gmm',
    'message_bank_unk_0545.gmm',
    'message_bank_unk_0546.gmm',
    'message_bank_unk_0547.gmm',
    'message_bank_unk_0548.gmm',
    'message_bank_unk_0549.gmm',
    'message_bank_unk_0550.gmm',
    'message_bank_pokemon_stat_names.gmm',
    'message_bank_unk_0552.gmm',
    'message_bank_counterpart_names.gmm',
    'message_bank_twinleaf_town.gmm',
    'message_bank_twinleaf_town_rival_house_1f.gmm',
    'message_bank_twinleaf_town_rival_house_2f.gmm',
    'message_bank_twinleaf_town_player_house_1f.gmm',
    'message_bank_twinleaf_town_player_house_2f.gmm',
    'message_bank_twinleaf_town_northeast_house.gmm',
    'message_bank_twinleaf_town_southwest_house.gmm',
    'message_bank_sandgem_town.gmm',
    'message_bank_sandgem_town_mart.gmm',
    'message_bank_sandgem_town_pokecenter_1f.gmm',
    'message_bank_sandgem_town_pokecenter_2f.gmm',
    'message_bank_sandgem_town_pokemon_research_lab.gmm',
    'message_bank_sandgem_town_counterpart_house_1f.gmm',
    'message_bank_sandgem_town_counterpart_house_2f.gmm',
    'message_bank_sandgem_town_house.gmm',
    'message_bank_floaroma_town.gmm',
    'message_bank_floaroma_town_mart.gmm',
    'message_bank_floaroma_town_pokecenter_1f.gmm',
    'message_bank_flower_shop.gmm',
    'message_bank_floaroma_town_southeast_house.gmm',
    'message_bank_floaroma_town_middle_house.gmm',
    'message_bank_solaceon_town.gmm',
    'message_bank_solaceon_town_mart.gmm',
    'message_bank_solaceon_town_pokecenter_1f.gmm',
    'message_bank_pokemon_day_care.gmm',
    'message_bank_solaceon_town_northeast_house.gmm',
    'message_bank_solaceon_town_pokemon_news_press.gmm',
    'message_bank_solaceon_town_north_house.gmm',
    'message_bank_solaceon_town_east_house.gmm',
    'message_bank_celestic_town.gmm',
    'message_bank_celestic_town_pokecenter_1f.gmm',
    'message_bank_celestic_town_north_house.gmm',
    'message_bank_celestic_town_northwest_house.gmm',
    'message_bank_celestic_town_northeast_house.gmm',
    'message_bank_celestic_town_southwest_house.gmm',
    'message_bank_celestic_town_cave.gmm',
    'message_bank_survival_area.gmm',
    'message_bank_survival_area_mart.gmm',
    'message_bank_survival_area_pokecenter_1f.gmm',
    'message_bank_battleground.gmm',
    'message_bank_survival_area_south_house.gmm',
    'message_bank_survival_area_north_house.gmm',
    'message_bank_resort_area.gmm',
    'message_bank_resort_area_mart.gmm',
    'message_bank_resort_area_pokecenter_1f.gmm',
    'message_bank_resort_area_ribbon_syndicate_1f.gmm',
    'message_bank_resort_area_ribbon_syndicate_2f.gmm',
    'message_bank_resort_area_ribbon_syndicate_elevator.gmm',
    'message_bank_villa.gmm',
    'message_bank_unk_0603.gmm',
    'message_bank_resort_area_house.gmm',
    'message_bank_unk_0605.gmm',
    'message_bank_flavor_names.gmm',
    'message_bank_unk_0607.gmm',
    'message_bank_times_of_day.gmm',
    'message_bank_unk_0609.gmm',
    'message_bank_ability_names.gmm',
    'message_bank_unk_0611.gmm',
    'message_bank_unk_0612.gmm',
    'message_bank_unk_0613.gmm',
    'message_bank_unk_0614.gmm',
    'message_bank_unk_0615.gmm',
    'message_bank_unk_0616.gmm',
    'message_bank_unk_0617.gmm',
    'message_bank_npc_trainer_names.gmm',
    'message_bank_trainer_class_names.gmm',
    'message_bank_trainer_class_names_with_articles.gmm',
    'message_bank_unk_0621.gmm',
    'message_bank_unk_0622.gmm',
    'message_bank_unk_0623.gmm',
    'message_bank_pokemon_type_names.gmm',
    'message_bank_underground.gmm',
    'message_bank_underground_goods.gmm',
    'message_bank_underground_goods_with_articles.gmm',
    'message_bank_underground_item_names.gmm',
    'message_bank_underground_item_names_with_articles.gmm',
    'message_bank_underground_trap_names.gmm',
    'message_bank_underground_trap_names_with_articles.gmm',
    'message_bank_underground_answers.gmm',
    'message_bank_underground_questions.gmm',
    'message_bank_unk_0634.gmm',
    'message_bank_union_room.gmm',
    'message_bank_unk_0636.gmm',
    'message_bank_unk_0637.gmm',
    'message_bank_unk_0638.gmm',
    'message_bank_unk_0639.gmm',
    'message_bank_unk_0640.gmm',
    'message_bank_unk_0641.gmm',
    'message_bank_route_226.gmm',
    'message_bank_route_226_house.gmm',
    'message_bank_route_230.gmm',
    'message_bank_unk_0645.gmm',
    'message_bank_unk_0646.gmm',
    'message_bank_move_names.gmm',
    'message_bank_unk_0648.gmm',
    'message_bank_plaza_event_names.gmm',
    'message_bank_unk_0650.gmm',
    'message_bank_plaza_minigame_names.gmm',
    'message_bank_plaza_item_names.gmm',
    'message_bank_unk_0653.gmm',
    'message_bank_unk_0654.gmm',
    'message_bank_unk_0655.gmm',
    'message_bank_unk_0656.gmm',
    'message_bank_unk_0657.gmm',
    'message_bank_unk_0658.gmm',
    'message_bank_unk_0659.gmm',
    'message_bank_unk_0660.gmm',
    'message_bank_unk_0661.gmm',
    'message_bank_unk_0662.gmm',
    'message_bank_greetings_en.gmm',
    'message_bank_greetings_fr.gmm',
    'message_bank_greetings_de.gmm',
    'message_bank_greetings_it.gmm',
    'message_bank_greetings_jp.gmm',
    'message_bank_greetings_es.gmm',
    'message_bank_unk_0669.gmm',
    'message_bank_unk_0670.gmm',
    'message_bank_unk_0671.gmm',
    'message_bank_unk_0672.gmm',
    'message_bank_unk_0673.gmm',
    'message_bank_unk_0674.gmm',
    'message_bank_unk_0675.gmm',
    'message_bank_unk_0676.gmm',
    'message_bank_unk_0677.gmm',
    'message_bank_unk_0678.gmm',
    'message_bank_unk_0679.gmm',
    'message_bank_unk_0680.gmm',
    'message_bank_unk_0681.gmm',
    'message_bank_unk_0682.gmm',
    'message_bank_unk_0683.gmm',
    'message_bank_unk_0684.gmm',
    'message_bank_unk_0685.gmm',
    'message_bank_unk_0686.gmm',
    'message_bank_unk_0687.gmm',
    'message_bank_unk_0688.gmm',
    'message_bank_unk_0689.gmm',
    'message_bank_unk_0690.gmm',
    'message_bank_unk_0691.gmm',
    'message_bank_unk_0692.gmm',
    'message_bank_unk_0693.gmm',
    'message_bank_country_names.gmm',
    'message_bank_unk_0695.gmm',
    'message_bank_unk_0696.gmm',
    'message_bank_unk_0697.gmm',
    'message_bank_unk_0698.gmm',
    'message_bank_unk_0699.gmm',
    'message_bank_unk_0700.gmm',
    'message_bank_unk_0701.gmm',
    'message_bank_unk_0702.gmm',
    'message_bank_unk_0703.gmm',
    'message_bank_unk_0704.gmm',
    'message_bank_unk_0705.gmm',
    'message_bank_unk_0711.gmm',
    'message_bank_unk_0713.gmm',
    'message_bank_unk_0714.gmm',
    'message_bank_unk_0717.gmm',
    'message_bank_unk_0719.gmm',
    'message_bank_unk_0720.gmm',
    'message_bank_unk_0721.gmm',
    'message_bank_unk_0722.gmm',
    'message_bank_unk_0723.gmm',
)

message_banks_narc_order = files('message_banks.order')

gmm_header_target = meson.current_build_dir() / 'gmm'
gmm_header_includes = include_directories('.')

gmm_header_dir = custom_target('gmm_header_dir',
    capture: true,
    output: 'gmm_header_dir',
    command: [
        'sh', '-c', '"$@"',
        '--',
        'mkdir', '-p', gmm_header_target
    ]
)

gmm_to_bin_gen = generator(msgenc_exe,
    arguments: [
        '-e',
        '--gmm',
        '-c', charmap_txt.full_path(),
        '-H', gmm_header_target / '@BASENAME@' + '.h',
        '@INPUT@',
        '@OUTPUT@'
    ],
    depends: [ charmap_txt, gmm_header_dir ],
    output: '@BASENAME@'
)

pokedex_message_banks = custom_target('pokedex_message_banks',
    output: [
        'message_bank_species_names.gmm',
        'message_bank_species_names_with_articles.gmm',
        'message_bank_species_dex_entry.gmm',
        'message_bank_species_weight.gmm',
        'message_bank_species_weight_gira.gmm',
        'message_bank_species_height.gmm',
        'message_bank_species_height_gira.gmm',
        'message_bank_species_name_number_1.gmm',
        'message_bank_species_name_number_2.gmm',
        'message_bank_species_name_number_3.gmm',
        'message_bank_species_category.gmm'
    ],
    input: message_banks_narc_order,
    env: json2bin_env,
    depends: [ py_consts_generators ],
    command: [
        make_pokedex_message_banks_py,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--output-dir', '@OUTDIR@'
    ]
)

message_bank_files += pokedex_message_banks

message_banks_narc = custom_target('pl_msg.narc',
    output: 'pl_msg.narc',
    input: gmm_to_bin_gen.process(message_bank_files),
    command: [
        knarc_exe,
        '-d', '@PRIVATE_DIR@',
        '-p', '@OUTPUT0@',
        '-o', message_banks_narc_order,
        '-n'
    ]
)

nitrofs_files += message_banks_narc
